crates/escalier_parser/src/snapshots/escalier_parser__tests__destructuring-11.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let foo = ({mut x, y: mut z}) => {};\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 36,
                    },
                },
                span: 0..36,
                pattern: Pattern {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 4,
                        },
                        end: Position {
                            line: 0,
                            column: 7,
                        },
                    },
                    span: 4..7,
                    kind: Ident(
                        BindingIdent {
                            name: "foo",
                            mutable: false,
                            span: 4..7,
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 7,
                                },
                            },
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 10,
                            },
                            end: Position {
                                line: 0,
                                column: 35,
                            },
                        },
                        span: 10..35,
                        kind: Lambda(
                            Lambda {
                                params: [
                                    EFnParam {
                                        pat: Pattern {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 11,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 28,
                                                },
                                            },
                                            span: 11..28,
                                            kind: Object(
                                                ObjectPat {
                                                    props: [
                                                        Shorthand(
                                                            ShorthandPatProp {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 12,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 17,
                                                                    },
                                                                },
                                                                span: 12..17,
                                                                ident: BindingIdent {
                                                                    name: "x",
                                                                    mutable: true,
                                                                    span: 16..17,
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 16,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 17,
                                                                        },
                                                                    },
                                                                },
                                                                init: None,
                                                            },
                                                        ),
                                                        KeyValue(
                                                            KeyValuePatProp {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 19,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 27,
                                                                    },
                                                                },
                                                                span: 19..27,
                                                                key: Ident {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 19,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 20,
                                                                        },
                                                                    },
                                                                    span: 19..20,
                                                                    name: "y",
                                                                },
                                                                value: Pattern {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 22,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 27,
                                                                        },
                                                                    },
                                                                    span: 22..27,
                                                                    kind: Ident(
                                                                        BindingIdent {
                                                                            name: "z",
                                                                            mutable: true,
                                                                            span: 22..27,
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 0,
                                                                                    column: 22,
                                                                                },
                                                                                end: Position {
                                                                                    line: 0,
                                                                                    column: 27,
                                                                                },
                                                                            },
                                                                        },
                                                                    ),
                                                                    inferred_type: None,
                                                                },
                                                                init: None,
                                                            },
                                                        ),
                                                    ],
                                                    optional: false,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        type_ann: None,
                                        optional: false,
                                    },
                                ],
                                body: [],
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
